src/kubernetes/flux/apps/karakeep/ingressroute.yaml
---
# External-DNS Service to create karakeep.zinkzone.tech DNS record
apiVersion: v1
kind: Service
metadata:
  name: karakeep-external-dns
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: karakeep.zinkzone.tech
spec:
  type: ExternalName
  externalName: traefik.zinkzone.tech
  ports:
    - port: 80
      protocol: TCP
      name: http
---
# Traefik IngressRoute for karakeep.zinkzone.tech
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.zinkzone.tech`)
      kind: Rule
      services:
        - name: karakeep
          port: 3000
  tls:
    certResolver: cloudflare
